--- a/index.html
+++ b/index.html
@@ -56,7 +56,22 @@
       </div>
     </section>
     <section class="container-fluid px-0">
-
+      <div class="row align-items-center ">
+        <div class="col-md-6">
+           <img src="imgs/milk.png" class="img-fluid" alt="">
+        </div>
+        <div class="col-6 text-center">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8">
+              <h2>Museum of Candy</h2>
+              <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline ">
+              <p> 
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+              </p> 
+            </div>
+          </div>  
+        </div>
+      </div>
     </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
