--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div class="col-md-6 text-center order-1 order-md-2">
           <div class="row justify-content-center">
-            <div class="col-10 col-lg-8 blurb">
+            <div class="col-10 col-lg-8 blurb  mb-5 mb-md-0">
               <h2>MUSEUM OF CANDY</h2>
               <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline ">
               <p> 
@@ -70,15 +70,12 @@
               </p> 
             </div>
           </div>  
-        </div>
+        </div> 
       </div>
       <div class="row align-items-center content">
-        <div class="col-md-6 order-2 ">
-           <img src="imgs/milk.png" class="img-fluid" alt="">
-        </div>
-        <div class="col-md-6 text-center  order-1">
+        <div class="col-md-6 text-center  ">
           <div class="row justify-content-center">
-            <div class="col-10 col-lg-8 blurb">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
               <h2>MUSEUM OF CANDY</h2>
               <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline ">
               <p> 
@@ -87,6 +84,25 @@
             </div>
           </div>  
         </div>
+        <div class="col-md-6 ">
+          <img src="imgs/gumball.png" class="img-fluid" alt="">
+       </div>
+      </div>
+      <div class="row align-items-center  content">
+        <div class="col-md-6 order-2 order-md-1">
+           <img src="imgs/sprinkles.png" class="img-fluid" alt="">
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>MUSEUM OF CANDY</h2>
+              <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline ">
+              <p> 
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+              </p> 
+            </div>
+          </div>  
+        </div> 
       </div>
     </section>
     <!-- Optional JavaScript -->
@@ -95,5 +111,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     
+<script>
+  $(function (){
+    $(document).scroll(function(){
+      var $nav = $("#mainNav");
+      $nav.toggleClass("scrolled",$(this).scrollTop()> $nav.height());
+    });
+  });
+</script>
+
   </body>
 </html>
